--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -21,65 +21,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 500px;
-}
-
-.formGroup {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 1rem;
-}
-
-.label {
-  font-size: 1.2rem;
-  margin-bottom: 0.5rem;
-}
-
-.textArea {
-  resize: none;
-  font-size: 1rem;
-  width: 100%;
-  padding: 0.5rem;
-  border: 1px solid #777;
-  border-radius: 4px;
-  background-color: #2c2c2c;
-  color: #ffffff;
-  outline: none;
-}
-
-.textArea:focus {
-  border-color: #55bbe8;
-}
-
-.fileUpload {
-  font-size: 1rem;
-  padding: 0.5rem;
-  border: 1px solid #777;
-  border-radius: 4px;
-  background-color: #2c2c2c;
-  color: #ffffff;
-  outline: none;
-  cursor: pointer;
-}
-
-.fileUpload:focus {
-  border-color: #55bbe8;
-}
-
-.button {
-  font-size: 1rem;
-  padding: 0.5rem;
-  border: 1px solid #55bbe8;
-  border-radius: 4px;
-  background-color: #55bbe8;
-  color: #ffffff;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  outline: none;
-}
-
-.button:hover {
-  background-color: #4aa4c4;
+  max-width: 100%;
+  /* Changed from 1600px to 100% */
 }
 
 .siteHeader {
