--- a/styles/FileInputForm.module.css
+++ b/styles/FileInputForm.module.css
@@ -29,6 +29,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 1rem;
+  width: 80%;
 }
 
 .label {
@@ -37,8 +38,8 @@
 
 .textArea {
   resize: none;
-  width: 100%;
-  height: 150px;
+  width: 100%; /*800px;*/
+  height: 400px;
   padding: 0.5rem;
   border: 1px solid #ccc;
   border-radius: 4px;
