--- a/styles/Review.module.css
+++ b/styles/Review.module.css
@@ -1,18 +1,19 @@
 .GameReview {
+  background: #1e1e1e;
+  color: white;
+
+  /*
   display: flex;
   align-items: center;
   flex-direction: column;
   height: 100vh;
-  background: #1e1e1e;
-  color: white;
-}
 
-.GameReview {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  */
 }
 
 .formContainer {
@@ -61,16 +62,19 @@
   border-color: rgba(255, 255, 255, 0.25);
 }
 
+/*
 .row {
   display: flex;
   justify-content: center;
   margin: 12px 0;
 }
+*/
 
 .Chessboard {
   border: 2px solid #34495e;
   border-radius: 4px;
   margin-bottom: 12px;
+  max-width: 400px; /* Adjust this value to match the board width */
 }
 
 .opensource {
@@ -79,8 +83,8 @@
 }
 
 .descriptionContainer {
-  width: 100%;
-  max-width: 600px; /* Adjust this value to match the board width */
+  /*width: 100%;*/
+  /* max-width: 600px; */ /* Adjust this value to match the board width */
   margin: 0 auto;
   padding: 1rem;
   background-color: #f8f9fa;
