--- a/src/styles/EvaluatedPosition.module.css
+++ b/src/styles/EvaluatedPosition.module.css
@@ -5,7 +5,14 @@
   margin-bottom: 2rem;
   border: 1px solid #444;
   border-radius: 8px;
-  background-color: #222; /* Set a dark background color here */
+  background-color: #222;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* this will center items horizontally */
+  justify-content: center; /* this will center items vertically */
+  max-width: 90%; /* or whatever value you prefer, to limit the width */
+  margin-left: auto; /* this will horizontally center .evaluatedPositionContainer within the row */
+  margin-right: auto; /* this will horizontally center .evaluatedPositionContainer within the row */
 }
 
 .title {
